[gd_scene load_steps=3 format=3 uid="uid://cqripisyqd3te"]

[ext_resource type="Script" uid="uid://chpikjv15nk7n" path="res://main/scripts/game.gd" id="1_612r5"]
[ext_resource type="Script" uid="uid://du4tynjlu5662" path="res://main/scripts/station_controller.gd" id="2_w0hxo"]

[node name="Game" type="Node2D"]
script = ExtResource("1_612r5")

[node name="TrainController" type="Node" parent="."]

[node name="StationController" type="Node" parent="."]
script = ExtResource("2_w0hxo")

[node name="Grid" type="Node2D" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="RootControl" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -648.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
mouse_filter = 1

[node name="Cards" type="HBoxContainer" parent="HUD/RootControl"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 8
alignment = 1

[node name="HideUI" type="Button" parent="HUD/RootControl"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -58.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
text = "Hide UI"

[connection signal="pressed" from="HUD/RootControl/HideUI" to="." method="_on_hide_ui_pressed"]
